# flutter_tiny_wavpack_decoder

./: .gitattributes  .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  analysis_options.yaml  dart_test.yaml  ffigen.yaml  pubspec.yaml  release.config.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: sine_stereo_16bit_44100.wv
example/integration_test/: decode_smoke_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: decode_outcome.dart  flows_io.dart  flows_web.dart  main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
ios/: flutter_tiny_wavpack_decoder.podspec
ios/Classes/: flutter_tiny_wavpack_decoder.c  ftwd_buffer.c  tw_float.c  tw_interface.c
lib/: flutter_tiny_wavpack_decoder.dart  flutter_tiny_wavpack_decoder_bindings_generated.dart
lib/src/: bindings.dart  bytes_decode_runner.dart  decoder.dart  exceptions.dart  ffi_bytes_decode_runner.dart  ffi_decode_runner.dart  ftwd_web_plugin.dart  library_loader.dart  native_decode_runner.dart  platform_defaults_io.dart  platform_defaults_stub.dart  platform_defaults_web.dart  wasm_decode_runner.dart
linux/: CMakeLists.txt
macos/: flutter_tiny_wavpack_decoder.podspec
macos/Classes/: ftwd_shim.c  tw_bits.c  tw_interface.c  tw_metadata.c  tw_unpack.c  tw_words.c  tw_wputils.c
src/: CMakeLists.txt  flutter_tiny_wavpack_decoder.c  ftwd_buffer.c  ftwd_shim.c  ftwd_shim.h
src/tiny-wavpack/: UPSTREAM.md
test/ffi/: host_decode_test.dart
test/fixtures/: corrupt_crc.wv  not_wavpack.wv  truncated.wv
test/unit/: decoder_test.dart
tool/: build_host_lib.sh  build_wasm.sh  check_wv_version.dart  corrupt_fixture.dart  generate_fixture_wav.dart  generate_fixtures.sh  release.dart  verify_fixture_roundtrip.dart
web_assets/: ftwd.js  ftwd.wasm  ftwd_worker.js
windows/: CMakeLists.txt
(+6 files in other folders)
